
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int False ;
 int True ;
 int msg (char*,int ) ;
 int us ;
 int userfile (char*,int *) ;

__attribute__((used)) static int
myidentity(void)
{
 if(!userfile("#c/user", &us))
  return False;

 msg("we are \"%s\"", us);
 return True;
}
