; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_myidentity.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/plan9/local/extr_3383.c_myidentity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"#c/user\00", align 1
@us = common dso_local global i32 0, align 4
@False = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"we are \22%s\22\00", align 1
@True = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @myidentity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @myidentity() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @userfile(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* @us)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @False, align 4
  store i32 %5, i32* %1, align 4
  br label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @us, align 4
  %8 = call i32 @msg(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @True, align 4
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %6, %4
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @userfile(i8*, i32*) #1

declare dso_local i32 @msg(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
